# open-planner-studio

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: auto-assign-issues.yml  ci.yml  live.yml  release.yml  snap.yml
docs/: CHANGELOG.md  TODO.md  extensions.md  planning-test-bevindingen.md  self-test-harness.md
docs/superpowers/: HANDOFF-2026-07-20-poorten-ongedraaid.md  modulariteit-audit.md  prestatie-modulariteit-audit.md  werkdagen-as-ontwerp.md  (+2 more)
electron/: main.cjs  preload.cjs
examples/: 01-grachtenpand-amsterdam.ifc  02-renovatie-basisschool.ifc  03-kantoorgebouw-zuidas.ifc  04-appartementen-eindhoven.ifc  05-brugvervanging-n279.ifc  06-parkeergarage-utrecht.ifc  07-industriehal-venlo.ifc  08-zorgcentrum-de-linde.ifc  09-rioolvervanging-delft.ifc  10-villa-wassenaar.ifc  11-sporthal-amstelveen.ifc  12-windturbine-offshore.ifc  13-supermarkt-albert-heijn.ifc  14-fietstunnel-arnhem.ifc  15-datacentrum-agriport.ifc  16-dijkversterking-markermeerdijk.ifc  17-hotel-scheveningen.ifc  18-station-uitbreiding-breda.ifc  19-basisschool-ikc.ifc  20-woonwijk-almere.ifc  README.md  showcase-appartementencomplex.ifc  showcase-fietstunnel-n225.ifc  showcase-groot-terrein-onderaannemer.ifc  showcase-rijwoningen-de-akkers.ifc  showcase-verbouwing-eengezinswoning.ifc  showcase-woonblok-de-hoven.ifc  woongebouw-nieuwbouw.ifc
scripts/: bump-version.js  dev-bootstrap.mjs  dev-lock.mjs  dev-port.mjs  dev-server.mjs  example-topologies.json  gen-core.ts  generate-examples.cjs  generate-examples.ts  generate-icon.mjs  generate-oosterhoutse-baai.mjs  i18n-apply-wave6.mjs  i18n-diff.mjs  i18n-translations-wave6.mjs  publish-wiki.mjs  run-ts.mjs  showcase-groot.ts  showcases.ts  spec.ts  tauri-dev.mjs  verify-docs.ts  verify-examples.ts
snap/: snapcraft.yaml
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
(+793 files in other folders)
