[package]
name = "open-planner-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Behouden voor de native command-escape-hatch (src/commands/mod.rs): payload-
# (de)serialisatie zodra die commands gestructureerde data gaan dragen.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
opt-level = "s"
